fix: change links in nav block

--- a/singolo1.html
+++ b/singolo1.html
@@ -19,14 +19,14 @@
                 <a href="#" class="star" style="font-size: 27px;">*</a>
             </div>
             <div class="nav">
-                <a href="#" style="color: #f06c64;">home</a>
-                <p></p>
+                <a href="#">home</a>
+                <a>&#183</a>
                 <a href="#">services</a>
-                <p></p>
+                <a> &#183</a>
                 <a href="#">portfolio</a>
-                <p></p>
+                <a> &#183</a>
                 <a href="#">about</a>
-                <p></p>
+                <a> &#183</a>
                 <a href="#">contact</a>
             </div>
         </nav>
