refactor: edit 3 column layout

--- a/singolo1.html
+++ b/singolo1.html
@@ -36,8 +36,8 @@
     <section class="slider">
         <div class="container">
             <button class="btn-left"><img src="./assets/less-than.png"></button>
-            <img src="./assets/iphone-vertical.png" class="ph-vert">
-            <img src="./assets/iphone-horizontal.png" class="ph-hor">
+            <img src="./assets/iphone-vertical.png" class="ph-vert" alt="iphone-vertical">
+            <img src="./assets/iphone-horizontal.png" class="ph-hor" alt="iphone-horizontal">
             <button class="btn-right"><img src="./assets/greather-than.png"></button>
         </div>
     </section>
@@ -45,95 +45,69 @@
     <section class="our-services">
         <div class="container">
             <h1>Our Services</h1>
+            
             <p class="description">
-                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-                <span style="letter-spacing: -0.1px;"> Duis</span>
-                <span style="letter-spacing: 0.6px;"> mollis,</span> non commodo luctus,
-                <span style="letter-spacing: normal;"> nisi </span>erat 
-                <span style="letter-spacing: 0.1px;">porttitor</span>
-                <span style="letter-spacing: -0.3px; line-height: 32px; font-size: 18px;">ligula, eget </span>lacinia
-                <span style="letter-spacing: -0.1px;"> odio </span>sem nec 
-                <span style="letter-spacing: -0.1px;">elit.</span> Fusce 
-                <span style="letter-spacing: 0.1px;"> dapibus,</span>
-                <span style="letter-spacing: -0.1px;"> tellus</span> 
-                <span style="letter-spacing: 0.3px;"> ac cursus</span> commodo,
-                <span style="letter-spacing: -0.1px;"> tortor</span> mauris cond<span style="letter-spacing: -0.1px;">imentum</span> nibh. 
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. 
+                Duis mollis, non commodo luctus, 
+                <span>nisi erat porttitor ligula, 
+                eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, 
+                tortor mauris condimentum nibh.</span>
             </p>
 
             <div class="grid-box">
-        <!--
-                <img src="./assets/pen.png">
+        
+            <img src="./assets/pen.png">
             <div class="item-service">
                 <h3>Custom Design</h3>
                 <p>
-                    <span style="letter-spacing: 0.1px;">Curabitur</span> 
-                    <span style="letter-spacing: normal;">  vestibulum</span> 
-                    <span style="letter-spacing: 0px;"> eget</span> 
-                    <span style="letter-spacing: normal;">mauris</span>  
-                    <span style="letter-spacing: normal;">quis</span>
-                    <span style="letter-spacing: normal;">laoreet. Phasellus</span>
-                       in quam laoreet,
-                     viverra lacus ut, ultrices velit.
-                </p>
-            </div>
--->
-            <img src="./assets/pen.png" style="top: 24px;">
-            <div class="item-service">
-                <h3 style="letter-spacing: -0.2px;">Custom Design</h3>
-                <p style=" text-align: justify;">
-                    Curabitur vestibulum eget mauris quis laoreet. 
+                    <span>Curabitur vestibulum eget mauris quis</span> laoreet. 
                     Phasellus in quam laoreet. viverra lacus ut, ultrices velit.
                 </p>
             </div>
 
-            <img src="./assets/bulb.png" style="top: 24px; left: 0;">
+            <img src="./assets/bulb.png">
             <div class="item-service">
-                <h3 style="letter-spacing: 0px; line-height: 24px; margin-top: 19px;">Inovative Ideas</h3>
-                <p style=" text-align: justify; line-height: 21px; margin-top: 7px;">
-                    Quisque luctus, quam eget molestie com-
+                <h3>Inovative Ideas</h3>
+                <p>
+                    <span>Quisque luctus, quam eget molestie com-</span>
                     modo, lacus purus cursus purus, nec
                      rutrum tellus dolor id lorem.
                 </p>
             </div>
 
-                <img src="./assets/heart.png" style="top: 23px; left: 0;">
+                <img src="./assets/heart.png">
             <div class="item-service">
-                <h3 style="letter-spacing: normal; margin-left: 1px;">Love<span style="letter-spacing: -0.2px;"> Is The Answer</span></h3>
-                <p style="letter-spacing: normal; text-align: justify;">
-                    Nulla sed nunc et tortor luctus faucibus. 
+                <h3>Love Is The Answer</h3>
+                <p>
+                    <span>Nulla sed nunc et tortor luctus faucibus.</span> 
                     Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
                 </p>
             </div>
 
-                <img src="./assets/phone.png" style="top: 23px;">
+                <img src="./assets/phone.png">
             <div class="item-service">
-                <h3 style="margin-left: 0; margin-top: 19px;" >Responsive<span style="letter-spacing: 0.1px"> Layout</span></h3>
-                <p style="letter-spacing: normal; text-align: justify;">
+                <h3>Responsive Layout</h3>
+                <p>
                     Sed porttitor placerat rhoncus. In at nunc tellus. 
-                    Maecenas blandit nunc ligula. Prae-sentelit leo.
+                    Maecenas blandit nunc ligula. Prae-<span>sentelit leo.</span>
                 </p>
             </div>
 
-                <img src="./assets/bubble.png" style="top: 23px; left: 0;">
+                <img src="./assets/bubble.png">
             <div class="item-service">
-                <h3 style="margin-top: 19px;">24 / 7 Support</h3>
-                <p style="text-align: justify; letter-spacing: normal;">
+                <h3>24 / 7 Support</h3>
+                <p>
                     Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. 
-                    Nulla a sem erat. Pellen-tesque egestas venenatis lorem.
+                    Nulla a sem erat. Pellen-<span>tesque egestas venenatis lorem.</span>
                 </p>
             </div>
 
-               <!-- 
-                <div>
-                <img src="./assets/star1.png" style="top: 36px; left: 14px;">
-                <img src="./assets/Ellipse1.png" style="top: -12px; left: 0;">
-                </div>-->
-                <img src="./assets/star.png" style="top: 23px; left: 0;">
+                <img src="./assets/star.png">
             <div class="item-service">
-                <h3 style="margin-left: 1px; margin-top: 19px;">Feel <span style="letter-spacing: 0.1px;">Like A Star</span></h3>
-                <p style="letter-spacing: normal; text-align: justify;">
+                <h3>Feel Like A Star</h3>
+                <p>
                     Quisque hendrerit purus dapibus, ornare nibh vitae, 
-                    viverra nibh. Fusce vitae aliquam tellus.
+                    viverra nibh. Fusce vitae <span>aliquam tellus.</span> 
                 </p>
             </div>
         </div>
