refactor: fine-tune 3 column layout

--- a/singolo1.html
+++ b/singolo1.html
@@ -60,8 +60,9 @@
             <div class="item-service">
                 <h3>Custom Design</h3>
                 <p>
-                    <span>Curabitur vestibulum eget mauris quis</span> laoreet. 
-                    Phasellus in quam laoreet. viverra lacus ut, ultrices velit.
+                    Curabitur vestibulum eget mauris quis
+                    laoreet. Phasellus in quam laoreet. viverra
+                    <span>lacus ut, ultrices velit.</span>
                 </p>
             </div>
 
@@ -69,9 +70,9 @@
             <div class="item-service">
                 <h3>Inovative Ideas</h3>
                 <p>
-                    <span>Quisque luctus, quam eget molestie com-</span>
+                    Quisque luctus, quam eget molestie com-
                     modo, lacus purus cursus purus, nec
-                     rutrum tellus dolor id lorem.
+                    <span>rutrum tellus dolor id lorem.</span>
                 </p>
             </div>
 
@@ -79,8 +80,9 @@
             <div class="item-service">
                 <h3>Love Is The Answer</h3>
                 <p>
-                    <span>Nulla sed nunc et tortor luctus faucibus.</span> 
-                    Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                    Nulla sed nunc et tortor luctus faucibus. 
+                    Morbi at aliquet turpis, et consequat felis.
+                    <span>Quisque condimentum.</span>
                 </p>
             </div>
 
@@ -89,7 +91,7 @@
                 <h3>Responsive Layout</h3>
                 <p>
                     Sed porttitor placerat rhoncus. In at nunc tellus. 
-                    Maecenas blandit nunc ligula. Prae-<span>sentelit leo.</span>
+                    Maecenas blandit nunc ligula. Prae-<span>sent elit leo.</span>
                 </p>
             </div>
 
@@ -98,7 +100,7 @@
                 <h3>24 / 7 Support</h3>
                 <p>
                     Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. 
-                    Nulla a sem erat. Pellen-<span>tesque egestas venenatis lorem.</span>
+                    Nulla a sem erat. Pellen-<span>tesque egestas venenatis lorem .</span>
                 </p>
             </div>
 
