feat: add About Us block

--- a/singolo2.html
+++ b/singolo2.html
@@ -50,50 +50,54 @@
     </div>
   </section>
 
- <!--
   <section class="about-us">
       <div class="container">
-        <h1>About Us</h1>
-        <p>
-        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, 
-        eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        <h1 class="about__title">About Us</h1>
+        <p class="about__subtitle">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor <span class="about__subtitle__compr">ligula, 
+        eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</span>
         </p>
-        <div class="about-item">
-            <img>
-            <h3></h3>
-            <p>
 
-            </p>
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
-        </div>
-        <div class="about-item">
-            <img>
-            <h3></h3>
-            <p>
+        <div class="about">
+          <div class="about__item">
+              <img src="./assets/adam.png">
+              <h3>Adam Jensen</h3>
+              <p>
+                Quisque luctus, quam eget molestie commodo, lacus purus <span  class="lttr-sp">cursus purus, nec rutrun tellus dolor id lorem.</span>
+              </p>
+              <img class="about__logo" src="./assets/facebook.png">
+              <img class="about__logo" src="./assets/google+.png">
+              <img class="about__logo" src="./assets/twitter.png">
+              <img class="about__logo" src="./assets/linkedin.png">
+          </div>
 
-            </p>
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
-        </div>
-        <div class="about-item">
-            <img>
-            <h3></h3>
-            <p>
+          <div class="about__item">
+              <img src="./assets/desmont.png">
+              <h3>Desmond Miles</h3>
+              <p>
+                <span class="lttr-sp">Curabitur vestibulum eger mauris quis laoreet. Phasellus</span> in quam laoreet, viverra lacus ut, ultrices velit.
+              </p>
+              <img class="about__logo" src="./assets/facebook.png">
+              <img class="about__logo" src="./assets/google+.png">
+              <img class="about__logo" src="./assets/twitter.png">
+              <img class="about__logo" src="./assets/linkedin.png">
+          </div>
 
-            </p>
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
-            <img class="logo">
+          <div class="about__item">
+              <img src="./assets/scolara.png">
+              <h3>Scolara Visari</h3>
+              <p>
+                <span class="lttr-sp">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet</span> turpis, et consequat felis. Quisque condimentum.
+              </p>
+              <img class="about__logo" src="./assets/facebook.png">
+              <img class="about__logo" src="./assets/google+.png">
+              <img class="about__logo" src="./assets/twitter.png">
+              <img class="about__logo" src="./assets/linkedin.png">
+          </div>
         </div>
       </div>
   </section>
--->
+
 
 </body>
 
